# DukkhaLessServer

./: .ghci  .ghcid  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  db_up_script.psql  development.conf  docker-compose.yml  docker_deploy.sh  dukkhaless.cabal  production.conf  shell.nix  stack.yaml
app/: App.hs  Conf.hs  Crypto.hs  Domain.hs  Queries.hs  Schema.hs  Types.hs
app/API/: Types.hs
app/App/: Middleware.hs
app/Domain/: Types.hs
app/Queries/: Decoders.hs  Encoders.hs
app/Schema/: Helpers.hs  Types.hs  V0001.hs
migrations/: 000001.psql  000002.psql  00001.psql
scripts/: docker_build.sh  docker_deploy.sh  docker_test.sh
src/: Main.hs
test/: Tests.hs
