name:                dukkhaless
version:             0.1.0.0
synopsis:            The backend to a self-help application.
description:         The backend to a self-help application. Rather simple with most processing being on the client level.
homepage:            https://github.com/DukkhaLess/DukkaLessServer
license:             GPL-3
license-file:        LICENSE
author:              Alexandra DeWit
maintainer:          alexa.dewit@gmail.com
copyright:           Alexandra DeWit (c) 2018
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

library
  other-modules:       
  build-depends:       base >=4.6 && < 5,
                       wai >= 3.0.0 && <3.3,
                       wai-extra >=3.0.0 && < 3.3,
                       scotty,
                       clay,
                       text,
                       blaze-html,
                       blaze-markup,
                       aeson,
                       protolude
  hs-source-dirs:      app
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  exposed-modules:     App


executable dukkhaless-app
  main-is:             Main.hs
  other-modules:       
  build-depends:       base >=4.6 && < 5
                     , protolude
                     , dukkhaless
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings

test-suite dukkhaless-test
  main-is:             Tests.hs
  hs-source-dirs:      test
  build-depends:       base >=4.6 && < 5
                     , protolude
                     , dukkhaless
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
 
source-repository head
   type: git
   location: https://github.com/DukkhaLess/DukkhaLessServer
