name:                dukkhaless
version:             0.1.0.0
synopsis:            The backend to a self-help application.
description:         The backend to a self-help application. Rather simple with most processing being on the client level.
homepage:            https://github.com/DukkhaLess/DukkaLessServer
license:             GPL-3
license-file:        LICENSE
author:              Alexandra DeWit
maintainer:          alexa.dewit@gmail.com
copyright:           Alexandra DeWit (c) 2018
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

library
  other-modules:       Types
                     , Schema
                     , Crypto
                     , Domain
                     , Queries
  build-depends:       base >=4.6 && < 5
                     , wai >= 3.0.0 && <3.3
                     , wai-extra >=3.0.0 && < 3.3
                     , wai-cors >= 0.2.6 && < 1.0
                     , warp >= 3.2.25 && < 3.3
                     , scotty
                     , clay
                     , configurator
                     , data-default >= 0.7.1.1 && < 1.0
                     , text
                     , time
                     , aeson
                     , transformers
                     , http-types
                     , lens
                     , protolude
                     , bytestring
                     , uuid-types
                     , text-short
                     , argon2 >= 1.3.0.1 && < 1.4
                     , postgresql-simple >= 0.5 && < 0.6
                     , entropy
                     , DRBG
                     , crypto-api
                     , transformers
                     , mtl
                     , stm
                     , uuid
                     , random
                     , jose-jwt
                     , hasql-migration >= 0.2.0 && < 0.3.0
                     , hasql >= 1.3.0.3 && < 1.4
                     , hasql-pool >= 0.5.0.1 && < 0.5
                     , hasql-transaction
  hs-source-dirs:      app
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , DeriveGeneric
                     , FlexibleInstances
                     , FlexibleContexts
                     , TypeFamilies
                     , TypeApplications
                     , GADTs
                     , StandaloneDeriving
                     , TypeSynonymInstances
                     , MultiParamTypeClasses
                     , GeneralizedNewtypeDeriving
  exposed-modules:     App
                     , Conf


executable dukkhaless-app
  main-is:             Main.hs
  build-depends:       base >=4.6 && < 5
                     , protolude
                     , dukkhaless
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

test-suite dukkhaless-test
  main-is:             Tests.hs
  hs-source-dirs:      test
  build-depends:       base >=4.6 && < 5
                     , protolude
                     , dukkhaless
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
 
source-repository head
   type: git
   location: https://github.com/DukkhaLess/DukkhaLessServer
